<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">
    <fragment
        android:id="@+id/homeFragment"
        android:name="me.dgmieth.kungfubbq.HomeFragment"
        android:label="Home"
        tools:layout="@layout/fragment_home">
        <argument
            android:name="loggedIn"
            android:defaultValue="false"
            app:argType="boolean" />
        <action
            android:id="@+id/callCatering"
            app:destination="@id/cateringFragment" />
        <action
            android:id="@+id/callCalendar"
            app:destination="@id/calendarFragment" />
        <action
            android:id="@+id/callSauseFunding"
            app:destination="@id/sauseFundingFragment" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="me.dgmieth.kungfubbq.LoginFragment"
        android:label="Log in"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/callRegisterFragment"
            app:destination="@id/registerFragment" />
    </fragment>
    <action android:id="@+id/action_global_loginFragment" app:destination="@id/loginFragment" />
    <fragment
        android:id="@+id/registerFragment"
        android:name="me.dgmieth.kungfubbq.RegisterFragment"
        android:label="Register"
        tools:layout="@layout/fragment_register" >
        <action
            android:id="@+id/returnToLoginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/userInfoFragment"
        android:name="me.dgmieth.kungfubbq.UserInfoFragment"
        android:label="User information"
        tools:layout="@layout/fragment_userinfo">
        <action
            android:id="@+id/callUpdatePassword"
            app:destination="@id/updatePasswordFragment" />
    </fragment>
    <fragment
        android:id="@+id/updatePasswordFragment"
        android:name="me.dgmieth.kungfubbq.UpdatePasswordFragment"
        android:label="Change password"
        tools:layout="@layout/fragment_updatepassword" >
        <argument
            android:name="token"
            app:argType="string" />
        <argument android:name="email"
            app:argType="string" />
        <action
            android:id="@+id/callBackUserInfoFragment"
            app:destination="@id/userInfoFragment"
            app:popUpTo="@id/userInfoFragment"
            app:popUpToInclusive="true" />
        <argument
            android:name="id"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/cateringFragment"
        android:name="me.dgmieth.kungfubbq.CateringFragment"
        android:label="Catering order"
        tools:layout="@layout/fragment_catering" >
        <argument
            android:name="homeLoggedArgument"
            app:argType="boolean"
            android:defaultValue="false" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="me.dgmieth.kungfubbq.AboutFragment"
        android:label="About this app"
        tools:layout="@layout/fragment_about" />
    <action android:id="@+id/callAbout" app:destination="@id/aboutFragment" />
    <fragment
        android:id="@+id/calendarFragment"
        android:name="me.dgmieth.kungfubbq.CalendarFragment"
        android:label="Calendar"
        tools:layout="@layout/fragment_calendar1" >
        <action
            android:id="@+id/callPreOrder"
            app:destination="@id/preOrderFragment" />
        <action
            android:id="@+id/callUpdateOrder"
            app:destination="@id/updateOrderFragment" />
        <action
            android:id="@+id/callPayOrder"
            app:destination="@id/payOrderFragment" />
        <action
            android:id="@+id/callPaidOrder"
            app:destination="@id/paidOrderFragment" />
    </fragment>
    <fragment
        android:id="@+id/preOrderFragment"
        android:name="me.dgmieth.kungfubbq.PreOrderFragment"
        android:label="Pre-order"
        tools:layout="@layout/fragment_preorder" >
        <argument
            android:name="cookingDateId"
            app:argType="integer"
            android:defaultValue="0" />
    </fragment>
    <fragment
        android:id="@+id/updateOrderFragment"
        android:name="me.dgmieth.kungfubbq.UpdateOrderFragment"
        android:label="Update order"
        tools:layout="@layout/fragment_updateorder" >
        <argument
            android:name="cookingDateId"
            app:argType="integer"
            android:defaultValue="0" />
    </fragment>
    <fragment
        android:id="@+id/payOrderFragment"
        android:name="me.dgmieth.kungfubbq.PayOrderFragment"
        android:label="Pay order"
        tools:layout="@layout/fragment_payorder" >
        <action
            android:id="@+id/callPay"
            app:destination="@id/payFragment" />
        <argument
            android:name="cookingDateId"
            app:argType="integer"
            android:defaultValue="0" />
    </fragment>
    <fragment
        android:id="@+id/payFragment"
        android:name="me.dgmieth.kungfubbq.PayFragment"
        android:label="Payment"
        tools:layout="@layout/fragment_pay" >
        <argument
            android:name="userEmail"
            app:argType="string"
            android:defaultValue="noValue" />
        <argument
            android:name="userId"
            app:argType="integer"
            android:defaultValue="0" />
        <argument
            android:name="coookingDateId"
            app:argType="integer"
            android:defaultValue="0" />
        <argument
            android:name="orderId"
            app:argType="integer"
            android:defaultValue="0" />
        <argument
            android:name="userToken"
            app:argType="string"
            android:defaultValue="noValue" />
        <argument
            android:name="qttyOfMeals"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/paidOrderFragment"
        android:name="me.dgmieth.kungfubbq.PaidOrderFragment"
        android:label="Paid order checkout"
        tools:layout="@layout/fragment_paidorder" >
        <argument
            android:name="cookingDateId"
            app:argType="integer"
            android:defaultValue="0" />
    </fragment>
    <action android:id="@+id/callUserInfoGlobal" app:destination="@id/userInfoFragment" />
    <action
        android:id="@+id/callHome"
        app:destination="@id/homeFragment"
        app:popUpTo="@id/homeFragment"
        app:popUpToInclusive="true" />
    <action
        android:id="@+id/callCalendarFragmentGlobal"
        app:destination="@id/calendarFragment"
        app:popUpTo="@id/calendarFragment"
        app:popUpToInclusive="true" />
    <action
        android:id="@+id/callPayOrderFragmentGlobal"
        app:destination="@id/payOrderFragment"
        app:popUpTo="@id/payOrderFragment" />
    <fragment
        android:id="@+id/sauseFundingFragment"
        android:name="me.dgmieth.kungfubbq.funding.SauseFundingFragment"
        android:label="Founder member"
        tools:layout="@layout/fragment_sause_funding" >
        <action
            android:id="@+id/goToSauseFundingPayFragment"
            app:destination="@id/sauseFundingPayFragment"
            app:popUpTo="@id/sauseFundingPayFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/sauseFundingPayFragment"
        android:name="me.dgmieth.kungfubbq.funding.SauseFundingPayFragment"
        android:label="Payment"
        tools:layout="@layout/fragment_sause_funding_pay">
        <argument
            android:name="bottleQtty"
            android:defaultValue="0"
            app:argType="integer" />
        <argument
            android:name="price"
            app:argType="float"
            android:defaultValue="0" />
        <argument
            android:name="userEmail"
            app:argType="string" />
        <argument
            android:name="userId"
            app:argType="integer"
            android:defaultValue="0" />
        <argument
            android:name="token"
            app:argType="string" />
    </fragment>
</navigation>