<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/userInfoMenuBtn"
        android:icon="@drawable/icon_userinfo"
        android:title="@string/menu_btn_userInfo"
        android:iconTint="@color/i_yellow"
        android:iconTintMode="src_in"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/logOutMenuBtn"
        android:icon="@drawable/ic_logout"
        android:title="@string/menu_btn_logout"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/editMenuBtn"
        android:icon="@drawable/icon_edit"
        android:iconTint="@color/i_yellow"
        android:title="Edit"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/aboutAppMenuBtn"
        android:icon="@drawable/icon_about"
        android:title="@string/menu_btn_aboutapp"

        app:showAsAction="ifRoom" />
</menu>