<resources>
    <string name="app_name">kungfuBBQ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_login">Log In</string>
    <string name="btn_catering">Need Catering?</string>
    <string name="menu_btn_aboutapp">About</string>
    <string name="menu_btn_userInfo">User info</string>
    <string name="btn_calendar">Calendar</string>
    <string name="edittext_login_username">johndoe@mail.com</string>
    <string name="edittext_login_password">3-20 characters</string>
    <string name="btn_cancel">Cancel</string>
    <string name="menu_btn_logout">Log out</string>
    <string name="textview_login_email">Fill in with your e-mail:</string>
    <string name="textview_login_password">Fill in with your password:</string>
    <string name="textview_login_forgot_password">Forgot password?</string>
    <string name="btn_register">Register</string>
    <string name="textview_login_register">Don\'t have an account with us?</string>
    <string name="edittext_register_inivitationcodelbl">Fill in with your invitation code:</string>
    <string name="edittext_register_invitatinocode_hint">KgfBBQ@.......</string>
    <string name="edittext_register_emaillbl">Fill in with the e-mail you sent to KungfuBBQ:</string>
    <string name="edittext_register_password">Create a password:</string>
    <string name="edittext_register_confirmpassword">Confirm your password:</string>
    <string name="userinfo_email">E-mail:</string>
    <string name="userinfo_membersince">Member since:</string>
    <string name="register_membersince_value_label">May 30 2021</string>
    <string name="userinfo_name_label">Name:</string>
    <string name="userinfo_phonenumber_label">Phone:</string>
    <string name="userinfo_facebookname_label">Facebook name:</string>
    <string name="userinfo_instagramname_label">Instagram name:</string>
    <string name="btn_updatepassword">Change password</string>
    <string name="updatepassword_currentpassword_label">Current password:</string>
    <string name="updatepassword_newpassword_label">New password:</string>
    <string name="updatepassword_confirmnewpassword_label">Confirm new password:</string>
    <string name="btn_save">Save</string>
    <string name="catering_textview_explanatorytext">You may hire KungfuBBQ for catering. Please, fill out this form with your contact information and tell us briefly about your needs (such as amount of people, date, menu, ...).</string>
    <string name="userinfo_phonenumber_hint">(001) 123-4567</string>
    <string name="catering_description_hint">Describe your need:</string>
    <string name="userinfo_name_hint">John Doe</string>
    <string name="btn_send">Send</string>
    <string name="about_appname">Kungfu BBQ app</string>
    <string name="about_version">version 1.0</string>
    <string name="avout_developedby">developed by dgmieth.me</string>
    <string name="about_copyritght">© 2021</string>
    <string name="about_visit">Please visit</string>
    <string name="about_link">https://dgmieth.me</string>
    <!--Material-Calendar-View-->
    <string name="material_calendar_monday">M</string>
    <string name="material_calendar_tuesday">T</string>
    <string name="material_calendar_wednesday">W</string>
    <string name="material_calendar_thursday">T</string>
    <string name="material_calendar_friday">F</string>
    <string name="material_calendar_saturday">S</string>
    <string name="material_calendar_sunday">S</string>
    <string name="calendar_date_lbl">Event:</string>
    <string name="calendar_status_lbl">Event status:</string>
    <string name="calendar_menu_lbl">Menu:</string>
    <string name="calendar_location_lbl">Location:</string>
    <string name="btn_preorder">Place pre-order</string>
    <string name="preorder_date_lbl">Event:</string>
    <string name="preorder_status_lbl">Event status:</string>
    <string name="preorder_menu_lbl">Menu:</string>
    <string name="preorder_location_lbl">Location:</string>
    <string name="preorder_numberofmeals_lbl">Number of meals:</string>
    <string name="preorder_mealprice_lbl">Box price:</string>
    <string name="preorder_totalprice_lbl">Total price:</string>
    <string name="btn_preorder_saveorder">Pre-order</string>
    <string name="btn_deleteorder">Delete</string>
    <string name="btn_updateorder">Update</string>
    <string name="btn_payorder">Pay</string>
    <string name="btn_confirm">Maybe I\'ll swing by!</string>
    <string name="msg_confirm_presence">We already know you may swing by &#128521;</string>
    <string name="pay_cardnumber_lbl">Credit Card Number</string>
    <string name="pay_cardcode_lbl">Security code</string>
    <string name="pay_validthrough_lbl">Expiration</string>
    <string name="btn_paidorder">Checkout paid pre-order</string>
    <string name="calendar_no_cooking_msg">"Sorry! We are not cooking today... "</string>
    <string name="btn_register_register">Register</string>
    <string name="paidorder_ordernumber">Order nr:</string>
    <string name="edittext_currentpassword">Current password</string>
    <string name="john_doe">John Doe</string>
    <string name="sad_face">Sad face</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="next_btn"><![CDATA[Next >>]]></string>
    <string name="register_name">* Fill in with your name:</string>
    <string name="register_phone">* Fill in with your phone number:</string>
    <string name="register_facebook">** Facebook name:</string>
    <string name="register_instagram">** Instagram name:</string>
    <string name="not_logged_in">Not logged in!</string>
    <string name="not_logged_in_message">You are not authenticated in KungfuBBQ server any longer. Please log in again.</string>
    <string name="first_come_first_served">FIRST COME FIRST SERVED</string>
    <string name="password_requirements">* At least one UPPER case and one lower case letter and one number required</string>
    <string name="database_error">Database error!</string>
    <string name="success">Success!</string>
    <string name="pay_tip_lbl">Like our food? Give us a tip...</string>
    <string name="pay_amount">Total amount:</string>
    <string name="meal_box_amout">Meals amount:</string>
    <string name="tip_amount_label">Tip amount:</string>
    <string name="payment_options">Payment options</string>
    <string name="payment_options_text">How would you like to pay your order?</string>
    <string name="remember_password">Remember my password</string>
    <string name="switch_off"></string>
    <string name="switch_on">on</string>
    <!-- SAUCE FUNDING STRINGS -->
    <string name="sause_funding_home_btn">Be a Sauce Pioneer</string>
    <string name="what_title">What? What do you mean?</string>
    <string name="what_text">Yes! You can help us Release Kungfu BBQ\'s first Sauce for retail!.\nA couple of months ago we sent our Peach Moonshine sauce recipe to the lab to bottle it, and now we are ready to order our first batch of about 2076 bottles! To begin the bottling process we need to pay $ %.2f.\nAnyone who preorders any number of these first bottles will be a \'Sauce Pioneer\', helping us found our first bottling contract.</string>
    <string name="benefits_title">Got\'cha! But what\'s in for me?</string>
    <string name="benefits_text">1. Single print only, collectable Pioneer Token: this Token will display your order number, and will be redeemable for one free side of any sauce upon presenting it to us, any visit, any location. (Limit: one Token per guest, only awarded upon each guest\'s first preorder during this campaign);\n2. A KungfuBBQ Ltd customized T-shirt;\n3. Your name will be on the first bottle you order with a custom message from our family. A true collectable.</string>
    <string name="keeptrack_title">Awesome\! But how will I\… I mean\… will I be able to\…</string>
    <string name="keeptrack_text">Upon purchasing, you will receive a receipt in your e-mail. When we receive the first batch we will contact you through mobile app notification, e-mail, phone and/or SMS to arrange the pick-up/delivery of your order.\nIn order to stay up to date on the progress of the campaign, check out the info below!</string>
    <string name="funding_btns_want">Let\'s do this!</string>
    <string name="funding_btns_pass">Maybe later</string>
    <string name="funding_pay_bottles_qtty_label">Bottle(s):</string>
    <string name="funding_pay_bottles_amount_label">Bottle(s) amount:</string>
    <string name="funding_alert_tip_information">Every single penny we receive as a tip on this payment will be added to the amount we need to purchase the first batch of our sauce &#128521;!</string>
    <string name="shirt_size_alert_title">Inform T-Shirt size</string>
    <string name="shirt_size_error">Your sized wasn\'t saved.</string>
    <string name="extra_text_for_tshirt_size">Please select your t-shirt size: </string>
    <string name="sauce_funding_tip_text">Leave a tip if you like!</string>
</resources>